discussion/kv_engine/130418/130418_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36956: Allow multiple ExecutorPool backends

To facilitate using a Folly executor-based ExecutorPool instead of our
Global Executor added in Couchbase 3.0, rename the existing
ExecutorPool class to 'CB3ExecutorPool', and make ExecutorPool a pure
virtual interface.

Currently this still creates exactly the same CB3-style ExecutorPool,
it just adds an indirection to permit other implementations in future.

Change-Id: Iaded9719a832e529147c2e5a61f72095e6f8360b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-30 10:47:40.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-30 10:50:22.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25422/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/executorpool.h:170:17:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25422/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3594/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:170:17: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    static std::mutex initGuard;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:235:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::vector<ExecutorThread*> ThreadQ;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
using ThreadQ = std::vector<ExecutorThread *>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:236:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::pair<ExTask, TaskQueue*> TaskQpair;
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:237:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::vector<TaskQueue*> TaskQ;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
using TaskQ = std::vector<TaskQueue *>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:386:13: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual ~CB3ExecutorPool();
    ~~~~~~~~^
                               override

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3594/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:170:17:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3594/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2109/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
